Bug 380317 - crash on shutdown in nsPlacesImportExportService::WriteContainerContents(), mLivemarkService is null. r=sspitzer.